<resources>
    <string name="app_name">EducProjeto</string>
    <string name="usuario">Usuario</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="entrar">Entrar</string>
    <string name="voltar">Voltar</string>
    <string name="cadastrar2">Cadastrar</string>
    <string name="senha">Senha</string>
    <string name="cadastro_de_usuario">Cadastro de Usuario</string>
    <string name="email">Email</string>
    <string name="nome_de_usuario">Nome</string>
    <string name="usu_rio">Email</string>
    <string name="senha2">Senha</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="confirmar_senha">Confirmar Senha</string>
    <string name="fechar">Fechar</string>
    <string name="ca_a_letras">Caça Letras</string>
    <string name="jogo_da_forca">Jogo da forca</string>
    <string name="dica">DICA</string>
    <string name="z">Z</string>
    <string name="y">Y</string>
    <string name="x">X</string>
    <string name="w">W</string>
    <string name="v">V</string>
    <string name="u">U</string>
    <string name="t">T</string>
    <string name="s">S</string>
    <string name="r">R</string>
    <string name="q">Q</string>
    <string name="p">P</string>
    <string name="o">O</string>
    <string name="n">N</string>
    <string name="m">M</string>
    <string name="l">L</string>
    <string name="k">K</string>
    <string name="j">J</string>
    <string name="i">I</string>
    <string name="h">H</string>
    <string name="g">G</string>
    <string name="f">F</string>
    <string name="e">E</string>
    <string name="d">D</string>
    <string name="c">C</string>
    <string name="b">B</string>
    <string name="a">A</string>
    <string name="palavra_secreta">PALAVRA SECRETA</string>
    <string name="come_ar">Começar</string>
    <string name="back">Voltar</string>
    <string name="ache_a_letra_b_min_scula">Ache a Letra B minuscula</string>
    <string name="ache_a_letra_d_min_scula">Ache a Letra D minuscula</string>
    <string name="dica_3">Dica 3</string>
    <string name="dica_2">Dica 2</string>
    <string name="dica_1">Dica 1</string>
</resources>
