<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/bg"
    android:layout_height="match_parent"
    tools:context=".activitys.JogoForcaActivity">

    <TextView
        android:id="@+id/tvPalavra"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:text="@string/palavra_secreta"
        android:textColor="@color/bgbotom"
        android:textColorLink="@color/bgbotom"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/lBotoes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <Button
                style="@style/letras"
                android:id="@+id/bA"
                android:text="@string/a" />
            <Button
                style="@style/letras"
                android:id="@+id/bB"
                android:text="@string/b" />
            <Button
                style="@style/letras"
                android:id="@+id/bC"
                android:text="@string/c" />
            <Button
                style="@style/letras"
                android:id="@+id/bD"
                android:text="@string/d" />
            <Button
                style="@style/letras"
                android:id="@+id/bE"
                android:text="@string/e" />
            <Button
                style="@style/letras"
                android:id="@+id/bF"
                android:text="@string/f" />
            <Button
                style="@style/letras"
                android:id="@+id/bG"
                android:text="@string/g" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <Button
                style="@style/letras"
                android:id="@+id/bH"
                android:text="@string/h" />
            <Button
                style="@style/letras"
                android:id="@+id/bI"
                android:text="@string/i" />
            <Button
                style="@style/letras"
                android:id="@+id/bJ"
                android:text="@string/j" />
            <Button
                style="@style/letras"
                android:id="@+id/bK"
                android:text="@string/k" />
            <Button
                style="@style/letras"
                android:id="@+id/bL"
                android:text="@string/l" />
            <Button
                style="@style/letras"
                android:id="@+id/bM"
                android:text="@string/m" />
            <Button
                style="@style/letras"
                android:id="@+id/bN"
                android:text="@string/n" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <Button
                style="@style/letras"
                android:id="@+id/bO"
                android:text="@string/o" />
            <Button
                style="@style/letras"
                android:id="@+id/bP"
                android:text="@string/p" />
            <Button
                style="@style/letras"
                android:id="@+id/bQ"
                android:text="@string/q" />
            <Button
                style="@style/letras"
                android:id="@+id/bR"
                android:text="@string/r" />
            <Button
                style="@style/letras"
                android:id="@+id/bS"
                android:text="@string/s" />
            <Button
                style="@style/letras"
                android:id="@+id/bT"
                android:text="@string/t" />
            <Button
                style="@style/letras"
                android:id="@+id/bU"
                android:text="@string/u" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:orientation="horizontal" >
            <Button
                style="@style/letras"
                android:id="@+id/bV"
                android:text="@string/v" />
            <Button
                style="@style/letras"
                android:id="@+id/bW"
                android:text="@string/w" />
            <Button
                style="@style/letras"
                android:id="@+id/bX"
                android:text="@string/x" />
            <Button
                style="@style/letras"
                android:id="@+id/bY"
                android:text="@string/y" />
            <Button
                style="@style/letras"
                android:id="@+id/bZ"
                android:text="@string/z" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/ivForca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:contentDescription="@null"
        android:src="@drawable/f"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/tvDica"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:text="@string/dica"
        android:textAlignment="center"
        android:textColor="@color/bgbotom"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/dica3"
        android:layout_width="74dp"
        android:layout_height="38dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="18dp"
        android:text="@string/dica_3" />

    <Button
        android:id="@+id/dica2"
        android:layout_width="74dp"
        android:layout_height="38dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="99dp"
        android:text="@string/dica_2" />

    <Button
        android:id="@+id/dica1"
        android:layout_width="74dp"
        android:layout_height="38dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/ivForca"
        android:text="@string/dica_1" />

</RelativeLayout>