<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    android:layout_height="match_parent"
    tools:context=".activitys.CacaLetrasActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="133dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bA"
            style="@style/letras"
            android:text="@string/a" />

        <Button
            android:id="@+id/bB"
            style="@style/letras"
            android:text="@string/b" />

        <Button
            android:id="@+id/bC"
            style="@style/letras"
            android:text="@string/c" />

        <Button
            android:id="@+id/bD"
            style="@style/letras"
            android:text="@string/d" />

        <Button
            android:id="@+id/bE"
            style="@style/letras"
            android:text="@string/e" />

        <Button
            android:id="@+id/bF"
            style="@style/letras"
            android:text="@string/f" />

        <Button
            android:id="@+id/bG"
            style="@style/letras"
            android:text="@string/g" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="-96dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/d7"
            style="@style/letras"
            android:text="@string/a" />

        <Button
            android:id="@+id/d6"
            style="@style/letras"
            android:text="@string/b" />

        <Button
            android:id="@+id/d5"
            style="@style/letras"
            android:text="@string/c" />

        <Button
            android:id="@+id/d4"
            style="@style/letras"
            android:text="@string/d" />

        <Button
            android:id="@+id/d3"
            style="@style/letras"
            android:text="@string/e" />

        <Button
            android:id="@+id/d2"
            style="@style/letras"
            android:text="@string/f" />

        <Button
            android:id="@+id/d1"
            style="@style/letras"
            android:text="@string/g" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="190dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/b7"
            style="@style/letras"
            android:text="@string/a" />

        <Button
            android:id="@+id/b6"
            style="@style/letras"
            android:text="@string/b" />

        <Button
            android:id="@+id/b5"
            style="@style/letras"
            android:text="@string/c" />

        <Button
            android:id="@+id/b4"
            style="@style/letras"
            android:text="@string/d" />

        <Button
            android:id="@+id/b3"
            style="@style/letras"
            android:text="@string/e" />

        <Button
            android:id="@+id/b2"
            style="@style/letras"
            android:text="@string/f" />

        <Button
            android:id="@+id/b1"
            style="@style/letras"
            android:text="@string/g" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="211dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/c7"
            style="@style/letras"
            android:text="@string/h" />

        <Button
            android:id="@+id/c6"
            style="@style/letras"
            android:text="@string/i" />

        <Button
            android:id="@+id/c5"
            style="@style/letras"
            android:text="@string/j" />

        <Button
            android:id="@+id/c4"
            style="@style/letras"
            android:text="@string/k" />

        <Button
            android:id="@+id/c3"
            style="@style/letras"
            android:text="@string/l" />

        <Button
            android:id="@+id/c2"
            style="@style/letras"
            android:text="@string/m" />

        <Button
            android:id="@+id/c1"
            style="@style/letras"
            android:text="@string/n" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="156dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bH"
            style="@style/letras"
            android:text="@string/h" />

        <Button
            android:id="@+id/bI"
            style="@style/letras"
            android:text="@string/i" />

        <Button
            android:id="@+id/bJ"
            style="@style/letras"
            android:text="@string/j" />

        <Button
            android:id="@+id/bK"
            style="@style/letras"
            android:text="@string/k" />

        <Button
            android:id="@+id/bL"
            style="@style/letras"
            android:text="@string/l" />

        <Button
            android:id="@+id/bM"
            style="@style/letras"
            android:text="@string/m" />

        <Button
            android:id="@+id/bN"
            style="@style/letras"
            android:text="@string/n" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="77dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/a7"
            style="@style/letras"
            android:text="@string/h" />

        <Button
            android:id="@+id/a6"
            style="@style/letras"
            android:text="@string/i" />

        <Button
            android:id="@+id/a5"
            style="@style/letras"
            android:text="@string/j" />

        <Button
            android:id="@+id/a4"
            style="@style/letras"
            android:text="@string/k" />

        <Button
            android:id="@+id/a3"
            style="@style/letras"
            android:text="@string/l" />

        <Button
            android:id="@+id/a2"
            style="@style/letras"
            android:text="@string/m" />

        <Button
            android:id="@+id/a1"
            style="@style/letras"
            android:text="@string/n" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="249dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bO"
            style="@style/letras"
            android:text="@string/o" />

        <Button
            android:id="@+id/bP"
            style="@style/letras"
            android:text="@string/p" />

        <Button
            android:id="@+id/bQ"
            style="@style/letras"
            android:text="@string/q" />

        <Button
            android:id="@+id/bR"
            style="@style/letras"
            android:text="@string/r" />

        <Button
            android:id="@+id/bS"
            style="@style/letras"
            android:text="@string/s" />

        <Button
            android:id="@+id/bT"
            style="@style/letras"
            android:text="@string/t" />

        <Button
            android:id="@+id/bU"
            style="@style/letras"
            android:text="@string/u" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="178dp"
        android:orientation="horizontal">

    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="63dp"
        android:textSize="30dp"
        android:textColor="@color/bgbotom"
        android:textStyle="bold"
        android:text="Ache a letra b" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="16dp"
        android:text="Voltar" />


</RelativeLayout>