<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".activitys.MenuActivity">

    <EditText
        android:id="@+id/usuarioLoga"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@color/bgcampos"
        android:drawableStart="@drawable/ic_action_user"
        android:ems="10"
        android:hint="@string/usu_rio"
        android:inputType="textPersonName"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/senhaLoga"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignStart="@+id/usuarioLoga"
        android:layout_below="@+id/usuarioLoga"
        android:layout_marginTop="34dp"
        android:drawableStart="@drawable/ic_action_senha"
        android:background="@color/bgcampos"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:textSize="25sp" />

    <android.support.v7.widget.CardView
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_below="@+id/senhaLoga"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:elevation="10dp"
        android:background="@color/bgbotom"
        app:cardCornerRadius="14dp"
        android:id="@+id/cardView">

        <RelativeLayout
            android:id="@+id/logar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/entrar"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18dp"
                android:textStyle="bold" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/cadastar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/cadastrar"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:src="@drawable/logoemdesenvolvimento" />

</RelativeLayout>